2008-01-29  Werner Koch  <wk@g10code.com>

	* mimemaker.c (do_mime_sign): Set CTE for SMIME.
	(delete_all_attachments): Remove extra semicolon accidently
	inserted with revision 916.

2008-01-18  Marcus Brinkmann  <marcus@g10code.de>

	* mimeparser.c (mime_verify): New variable sig_len, and pass it on
	to engine_verify_start.
	* engine.h (engine_verify_start): Add new argument sig_len.
	* engine.c (engine_verify_start): Add new argument sig_len and
	pass it on to op_assuan_verify and op_gpgme_verify.
	* engine-assuan.h (op_asssuan_verify): Add new argument sig_len.
	* engine-gpgme.c (op_gpgme_verify): New argument sig_len and use
	it instead of string length of signature.
	* engine-assuan.c (op_assuan_verify): Likewise.

2008-01-11  Werner Koch  <wk@g10code.com>

	* mimemaker.c (finalize_message): Add args PROTOCOL and ENCRYPT
	and use them to set the override message class.
	(mime_sign, mime_encrypt, mime_sign_encrypt): Pass this info via
	the new args.
	(do_mime_sign): Set micalg to sha1 for CMS.

	* message.cpp (message_decrypt): Add hack fro seldgenerated messages.

2008-01-10  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (get_gpgolmsgclass_tag, mapi_set_gpgol_msg_class):
	New.
	(mapi_change_message_class, mapi_get_message_type): Try override
	first.

	* message.cpp (message_incoming_handler): Remove arg MSGTYE and
	let the function retrieve it.  Changed all callers.  Retry after a
	sucessful message class change.
	* olflange.cpp (getMsgtype): Remove.  The caching might lead to
	problems and makes it all more complex.  Changed all callers to
	use mapi_get_message_type.
	
	* mimemaker.c (create_top_encryption_header) <SMIME>: Write empty
	line after header.

2008-01-09  Werner Koch  <wk@g10code.com>

	* mimeparser.c (finish_saved_body): New.
	(finish_attachment): Keep the body attachment open.
	(mime_decrypt, mime_verify): Close the saved body data.
	(t2body): Continue body attachments.

	* message.cpp (message_verify): Save changes.
