@@ -500,6 +500,7 @@ GpgolExt::Install(LPEXCHEXTCALLBACK pEECB, ULONG lContext, ULONG lFlags)
       || lContext == EECONTEXT_VIEWER
       || lContext == EECONTEXT_SESSION)
     {
+
 //       LPUNKNOWN pApplication = get_outlook_application_object (pEECB);
 //       log_debug ("%s:%s: pApplication=%p\n",
 //                    SRCNAME, __func__, pApplication);
